# shufflr

./: .gitignore  README.md  setup.cfg  setup.py  shufflr.py
src/shufflr/: __init__.py  __main__.py  artist.py  client.py  configuration.py  genres.json  logging.py  main.py  playlist.py  shuffling.py  track.py
tools/: update_arguments_in_readme.py  update_every_noise_at_once_data.py
