# Copyright (C) 2022 Julian Valentin
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[metadata]
name = shufflr
version = 1.0.0
description = Shufflr - Shuffle Spotify playlists such that consecutive songs are similar.
license = Mozilla Public License, v. 2.0

[options]
python_requires = >= 3.8
package_dir =
  =src
packages = find:
install_requires =
  numpy
  ortools
  requests-cache
  spotipy

[options.extras_require]
plot =
  matplotlib

[options.package_data]
shufflr = genres.json

[options.packages.find]
where = src
